flux/apps/int/koito/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koito
  labels:
    app.kubernetes.io/name: koito
    app.kubernetes.io/instance: koito
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: koito
      app.kubernetes.io/instance: koito
  template:
    metadata:
      annotations:
        k8up.io/backupcommand: sh -c 'PGDATABASE="$POSTGRES_DB" PGUSER="$POSTGRES_USER" PGPASSWORD="$POSTGRES_PASSWORD" pg_dumpall --clean --if-exists --username=$POSTGRES_USER'
        k8up.io/file-extension: .sql
        k8up.io/backupcommand-container: postgres
      labels:
        app.kubernetes.io/name: koito
        app.kubernetes.io/instance: koito
    spec:
      containers:
        - name: postgres
          image: postgres:16
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: koito-db
              subPath: postgres
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - koito
                - -d
                - koitodb
            initialDelaySeconds: 10
            periodSeconds: 10
        - name: koito
          image: gabehf/koito:v0.1.1
          ports:
            - containerPort: 4110
              name: http
          volumeMounts:
            - mountPath: /etc/koito
              name: koito-data
              subPath: koito
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /
              port: 4110
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 4110
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 4110
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: koito-data
          persistentVolumeClaim:
            claimName: koito-pvc
        - name: koito-db
          persistentVolumeClaim:
            claimName: koito-db-pvc
