flux/apps/int/koito/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: koito-svc
  labels:
    app.kubernetes.io/name: koito
    app.kubernetes.io/instance: koito
spec:
  selector:
    app.kubernetes.io/name: koito
    app.kubernetes.io/instance: koito
  ports:
    - name: http
      protocol: TCP
      port: 4110
      targetPort: 4110
  type: ClusterIP
